// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PerfectionExecution expired 1 days ago 1`] = `
<p
  class="PerfectionExecution"
>
  Изменение статуса на "Tребуется информация" i18n:happened вчера (9 мар. 2019)
</p>
`;

exports[`PerfectionExecution expired 2 days ago 1`] = `
<p
  class="PerfectionExecution"
>
  Изменение статуса на "Tребуется информация" i18n:happened 2 дня назад (8 мар. 2019)
</p>
`;

exports[`PerfectionExecution expired 2 days ago, but not applied yet 1`] = `
<p
  class="PerfectionExecution"
>
  Изменение статуса на "Tребуется информация" i18n:will-happen сегодня (10 мар. 2019)
</p>
`;

exports[`PerfectionExecution expired today 1`] = `
<p
  class="PerfectionExecution"
>
  Изменение статуса на "Tребуется информация" i18n:happened сегодня (10 мар. 2019)
</p>
`;

exports[`PerfectionExecution with 2 days expire 1`] = `
<p
  class="PerfectionExecution"
>
  Изменение статуса на "Tребуется информация" i18n:will-happen через 2 дня (12 мар. 2019)
</p>
`;

exports[`PerfectionExecution with 5 days expire 1`] = `
<p
  class="PerfectionExecution"
>
  Изменение статуса на "Tребуется информация" i18n:will-happen через 5 дней (15 мар. 2019)
</p>
`;

exports[`PerfectionExecution with 21 days expire 1`] = `
<p
  class="PerfectionExecution"
>
  Изменение статуса на "Tребуется информация" i18n:will-happen через 21 день (31 мар. 2019)
</p>
`;

exports[`PerfectionExecution with threat 1`] = `
<p
  class="PerfectionExecution PerfectionExecution_threat"
>
  Изменение статуса на "Tребуется информация"
</p>
`;

exports[`PerfectionExecution with today expire 1`] = `
<p
  class="PerfectionExecution"
>
  Изменение статуса на "Tребуется информация" i18n:will-happen сегодня (10 мар. 2019)
</p>
`;

exports[`PerfectionExecution with tomorrow expire 1`] = `
<p
  class="PerfectionExecution"
>
  Изменение статуса на "Tребуется информация" i18n:will-happen завтра (11 мар. 2019)
</p>
`;
